--- a/src/components/Projects/ProjectCard.module.css
+++ b/src/components/Projects/ProjectCard.module.css
@@ -34,8 +34,11 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  flex: 1;
   gap: 6px;
   list-style: none;
+  align-items: flex-start;
+  align-content: flex-start;
 }
 
 .skill {
