--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -53,6 +53,15 @@
   font-weight: 600;
   padding: 17px 26px;
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
+  transition: all 0.3s;
+  border: 4px solid var(--color-primary);
+  box-sizing: border-box ;
+}
+
+.contactBtn:hover {
+  color: var(--color-primary);
+  /* border: 2px solid var(--color-primary); */
+  background-color: var(--color-text);
 }
 
 /* .heroImg {
