--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -39,7 +39,7 @@
 }
 
 .skillImageContainer {
-  background-color: var(--color-secondary);
+  background-color: var(--color-icons-bacground);
   border-radius: 100%;
   display: flex;
   align-items: center;
