--- a/src/vars.css
+++ b/src/vars.css
@@ -3,6 +3,7 @@
   --color-text: #fff;
   --color-primary: #576cbc;
   --color-secondary: #19376d;
+  --color-icons-bacground: #fcf6f6;
   --color-dark: #0b2447;
   --color-bg: #04152d;
 
